--- a/debian/jessie/control
+++ b/debian/jessie/control
@@ -1,13 +1,15 @@
 Source: node-mongo-express
 Section: utils
-Priority: extra
+Priority: optional
 Maintainer: Manala <contact@manala.io>
-Build-Depends: nodejs, debhelper (>= 9.0.0)
+Build-Depends: debhelper (>= 9),
+               nodejs
 Standards-Version: 3.9.8
 Homepage: https://github.com/mongo-express/mongo-express
 
 Package: node-mongo-express
 Architecture: all
-Depends: nodejs, ${misc:Depends}
+Depends: ${misc:Depends},
+         nodejs
 Description: Web-based MongoDB admin interface, written with Node.js and express
  Web-based MongoDB admin interface, written with Node.js and express
