Fix lsb-base dependencies

--- a/debian/jessie/control
+++ b/debian/jessie/control
@@ -13,7 +13,7 @@ Breaks: node-mongo-express
 Provides: node-mongo-express
 Architecture: all
 Depends: ${misc:Depends},
-         nodejs,
-         lsb-base (>= 3.0-6)
+         lsb-base (>= 3.2-14),
+         nodejs
 Description: Web-based MongoDB admin interface, written with Node.js and express
  Web-based MongoDB admin interface, written with Node.js and express
